--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
-    "pug": "^2.0.0-beta3"
+    "pug": "^2.0.0-beta3",
+    "consolidate": "^0.14.1"
   },
   "devDependencies": {
     "gulp-watch": "^4.3.6",
