--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
     "pug": "^2.0.0-beta3",
-    "consolidate": "^0.14.1"
+    "consolidate": "^0.14.1",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "gulp-watch": "^4.3.6",
