--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {
+    "express-handlebars": "^3.0.0",
     "gulp-watch": "^4.3.6",
     "nodemon": "^1.9.2"
   }
