--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "passport-twitter": "^1.0.4",
     "pug": "^2.0.0-beta3",
     "consolidate": "^0.14.1",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "express-handlebars": "^3.0.0"
   },
   "devDependencies": {
-    "express-handlebars": "^3.0.0",
     "gulp-watch": "^4.3.6",
     "nodemon": "^1.9.2"
   }
