--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
-    "pug": "^2.0.0-beta3"
+    "pug": "^2.0.0-beta3",
+    "consolidate": "^0.14.1",
+    "swig": "^1.4.2",
+    "express-handlebars": "^3.0.0"
   },
   "devDependencies": {
+    "gulp-watch": "^4.3.6",
     "nodemon": "^1.9.2"
   }
 }
