--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/searsaw/cincybrewscene#readme",
   "dependencies": {
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-session": "^1.13.0",
+    "fb": "^1.1.1",
     "helmet": "^2.1.1",
     "mongoose": "^4.5.0",
     "morgan": "^1.7.0",
