--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "CincyBrewScene site",
   "main": "index.js",
+  "engines": {
+    "node": "6.2.1"
+  },
   "scripts": {
     "start": "node index.js",
     "serve": "nodemon index.js"
