--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "express-handlebars": "^3.0.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.6",
     "nodemon": "^1.9.2"
   }
