--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "start": "node index.js",
-    "serve": "nodemon index.js"
+    "serve": "nodemon index.js",
+    "build:watch": "gulp watch",
+    "build:map": "envify public/js/find_directions.js > public/dist/find_directions.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,9 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
     "fb": "^1.1.1",
+    "gulp": "^3.9.1",
+    "gulp-envify": "^1.0.0",
+    "gulp-less": "^3.1.0",
     "helmet": "^2.1.1",
     "mongoose": "^4.5.0",
     "morgan": "^1.7.0",
@@ -38,13 +43,18 @@
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
     "pug": "^2.0.0-beta3",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "uglify": "^0.1.5"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "envify": "^3.4.0",
     "gulp-babel": "^6.1.2",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.6",
+    "minifyify": "^7.3.3",
     "nodemon": "^1.9.2"
   }
 }
