--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ TW_CLIENT_SECRET=
 TW_CALLBACK_URL=
 MONGO_URL=
 ARCGIS_KEY=
+UBER_CLIENT_ID=
+UBER_CLIENT_SECRET=
+UBER_SERVER_TOKEN=
+UBER_CALLBACK_URL=
