--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport-facebook": "^2.1.1",
     "passport-twitter": "^1.0.4",
     "pug": "^2.0.0-beta3",
+    "request": "^2.72.0",
     "swig": "^1.4.2",
     "uglify": "^0.1.5"
   },
