--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.15.1",
     "connect-mongo": "^1.2.0",
     "consolidate": "^0.14.1",
+    "cron": "^1.1.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
